kustomize/overlays/remote-ingress-replicas/ingress-org.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: probes
spec:
  ingressClassName: nginx
  rules:
    - host: probes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-target
                port:
                  number: 3000
